[package]
name = "finn-assembler"
version = "0.2.2"
authors = ["adam"]
edition = "2018"
license = "MIT"
description = "The Finn IR Assembler"
readme = "README.md"
repository = "https://github.com/adam-mcdaniel/finn-assembler"
documentation = "https://docs.rs/finn-assembler"

[[bin]]
path = "src/main.rs"
name = "fn"


[dependencies]
regex = "1"
clap = "2"
fs_extra="1.1.0"
term = "0.5.1"
