[package]
name = "output"
version = "0.1.0"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"

[dependencies]
hlvm = "0.6.0"



[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false